@@ -1,20 +1,0 @@
-package org.fenixedu.ulisboa.specifications.domain.util.email;
-
-import org.fenixedu.academic.domain.organizationalStructure.Unit;
-import org.fenixedu.academic.domain.util.email.Sender;
-import org.fenixedu.bennu.core.groups.Group;
-
-public class SystemSender extends SystemSender_Base {
-
-    public SystemSender() {
-        super();
-        setMembers(Group.managers());
-        setFromAddress(Sender.getNoreplyMail());
-        setSystemRootDomainObject(getRootDomainObject());
-        setFromName(createFromName());
-    }
-
-    public String createFromName() {
-        return String.format("%s (%s)", Unit.getInstitutionAcronym(), "Sistema Fénix");
-    }
-}
