@@ -1,3 +1,5 @@
+- Refactor: Changes sendConcludeEmail to use SystemSender [#qubIT-Omnis-7780]
+
 7.21.5 (13-01-2025)
 - Refactor: change references of EntryPhase to AdmissionPhase [#qubIT-Fenix-5905]
 
